# silver_animation

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: 01_simple_linear.rs  02_linear.rs
src/: contained.rs  lib.rs  linear.rs
