[package]
name = "silver_animation"
version = "0.1.0-alpha0.1"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lenscas/silver_animation/"
keywords = ["game", "graphics", "gamedev","animation","quicksilver"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = {version="0.4.0-alpha0.4"}