[package]
name = "silver_animation"
description = "A basic animation system for quicksilver"
version = "0.1.0-alpha0.2"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lenscas/silver_animation/"
keywords = ["game", "graphics", "gamedev","animation","quicksilver"]
categories = ["game-development"]


[features]
stdweb = ["quicksilver/stdweb"]

[dependencies]
quicksilver = {version="0.4.0-alpha0.5"}